--- a/NLP_by_Deep_Learning/NLP_by_DL_5.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_5.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "\\begin{align*}\n",
     "\\hline{}\n",
-    "&\\text{Input: } \\, X = (x_{i})_{i=1}^{I} \\\\\n",
+    "&\\text{Input:} \\hspace{5pt} X = (x_{i})_{i=1}^{I} \\\\\n",
     "&\\text{begin} \\\\\n",
     "&\\hspace{20pt}  h_{0}^{fw1} \\leftarrow 0, h_{0}^{fw2} \\leftarrow 0, h_{I+1}^{bw1} \\leftarrow 0, h_{I+1}^{bw2} \\leftarrow 0 \\\\\n",
     "&\\hspace{20pt}  \\bar{X} \\leftarrow E^{s}X \\\\\n",
@@ -54,7 +54,7 @@
     "&\\hspace{40pt} h_{i'}^{s} = h_{i'}^{fw2} + h_{i'}^{bw2} \\\\\n",
     "&\\hspace{20pt} \\text{end} \\\\\n",
     "&\\text{end} \\\\\n",
-    "&\\text{Output: } \\, H^{s}=(h_{i}^{s})_{i=1}^{I}, h_{I}^{fw1}, h_{I}^{fw2}, h_{1}^{bw1}, h_{1}^{bw2} \\\\\n",
+    "&\\text{Output:} \\hspace{5pt} H^{s}=(h_{i}^{s})_{i=1}^{I}, h_{I}^{fw1}, h_{I}^{fw2}, h_{1}^{bw1}, h_{1}^{bw2} \\\\\n",
     "\\hline{}\n",
     "\\end{align*}\n",
     "\n"
@@ -68,7 +68,7 @@
     "\n",
     "\\begin{align*}\n",
     "\\hline{}\n",
-    "&\\text{Input: } \\, H^{s}=(h_{i})_{i=1}^{I}, h_{I}^{fw1}, h_{I}^{fw2}, h_{1}^{bw1}, h_{1}^{bw2}, Y=(y_{j})_{j=1}^{J} \\\\\n",
+    "&\\text{Input:} \\hspace{5pt} H^{s}=(h_{i})_{i=1}^{I}, h_{I}^{fw1}, h_{I}^{fw2}, h_{1}^{bw1}, h_{1}^{bw2}, Y=(y_{j})_{j=1}^{J} \\\\\n",
     "&\\text{begin} \\\\\n",
     "&\\hspace{20pt} z_{0}^{fw1} \\leftarrow h_{I}^{fw1} + h_{1}^{bw1} \\\\\n",
     "&\\hspace{20pt} z_{0}^{fw2} \\leftarrow h_{I}^{fw2} + h_{1}^{bw2} \\\\\n",
@@ -91,7 +91,7 @@
     "&\\hspace{20pt} \\text{end} \\\\\n",
     "&\\hspace{20pt} \\text{loss} \\, \\leftarrow \\sum_{j=1}^{J+1} \\text{loss}_{j} \\\\\n",
     "&\\text{end} \\\\\n",
-    "&\\text{Output: } \\text{loss} \\\\\n",
+    "&\\text{Output:} \\hspace{5pt} \\text{loss} \\\\\n",
     "\\hline{}\n",
     "\\end{align*}"
    ]
@@ -106,7 +106,7 @@
     "\n",
     "\\begin{align*}\n",
     "\\hline{}\n",
-    "&\\text{Input: } \\, H^{s}=(h_{i})_{i=1}^{I}, h_{I}^{fw1}, h_{I}^{fw2}, h_{1}^{bw1}, h_{1}^{bw2} \\\\\n",
+    "&\\text{Input:} \\hspace{5pt} H^{s}=(h_{i})_{i=1}^{I}, h_{I}^{fw1}, h_{I}^{fw2}, h_{1}^{bw1}, h_{1}^{bw2} \\\\\n",
     "&\\text{begin} \\\\\n",
     "&\\hspace{20pt} z_{0}^{fw1} \\leftarrow h_{I}^{fw1} + h_{1}^{bw1} \\\\\n",
     "&\\hspace{20pt} z_{0}^{fw2} \\leftarrow h_{I}^{fw2} + h_{1}^{bw2} \\\\\n",
@@ -129,7 +129,7 @@
     "&\\hspace{20pt} \\text{until} \\hspace{5pt} \\hat{y}_{j}=y^{(EOS)} \\\\\n",
     "&\\hspace{20pt} J \\leftarrow j-1 \\\\\n",
     "&\\text{end} \\\\\n",
-    "&\\text{Output: } \\hat{Y} = (\\hat{y}_{j})_{j=1}^{J} \\\\\n",
+    "&\\text{Output:} \\hspace{5pt} \\hat{Y} = (\\hat{y}_{j})_{j=1}^{J} \\\\\n",
     "\\hline{}\n",
     "\\end{align*}"
    ]
@@ -139,7 +139,45 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### 入出力の処理単位、未知語に対する改良\n"
+    "#### 入出力の処理単位、未知語に対する改良\n",
+    "語彙数を増やすと計算量が大きくなりすぎ、また語彙選択が難しくなる。  \n",
+    "一方で未知語を減らすには語彙を増やすしかないが、零にはできない。\n",
+    "\n",
+    "SMTの頃より未知語を後処理で何らかの語に置き換えるという手法が一般的である。\n",
+    "\n",
+    "また、入出力単位を単語から文字に変更するという手法もあり、  \n",
+    "語彙数の問題を改善できるが、系列長が極めて長くなるという問題もある。\n",
+    "\n",
+    "単語と文字の中間的なバイト対符号化（byte pair encoding; BPE）という手法も使われている。  \n",
+    "これは出現頻度順に文字ペアを１つの文字としてまとめ、指定の語彙数まで符号化を進めるというものである。\n",
+    "\n",
+    "現時点では、これらの手法の優劣は不明である。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 被覆に関する改良\n",
+    "NMTの問題として\n",
+    " - 過剰生成問題（over-generation ploblem） ：同じ単語やフレーズが繰り返し生成される\n",
+    " - 不足生成問題（under-generation ploblem） ：元の文の必要な語やフレーズが無視される\n",
+    "\n",
+    "が知られている。  \n",
+    "これらの問題を解決する手法として、被覆（coverage）という概念の導入が提案されている。\n",
+    "\n",
+    "注意機構で計算される注意確率は、復号化器の時刻 $j$ で得られた固定長ベクトルが  \n",
+    "入力分のどの部分と適合するかの確率を計算したものになる。  \n",
+    "この確率の合計が最終的に何らかの値（要素がすべて１のベクトルなど）になるように学習する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 5.2　文書要約\n"
    ]
   }
  ],
