--- a/NLP_by_Deep_Learning/NLP_by_DL_5.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_5.ipynb
@@ -334,7 +334,124 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 5.3　対話"
+    "### 5.3　対話\n",
+    "対話システム（dialog system）は人とコンピュータが会話することを目的としたシステムで、  \n",
+    "主にユーザインターフェースとして開発が進められている。\n",
+    "\n",
+    "旅行案内などのタスク志向対話システム個別のサブシステムの組み合わせで構成されてきたが  \n",
+    "ニューラルネットに基づく手法で、人の発話などを入力、応答を出力とするシステムの直接学習がはじまっている。  \n",
+    "2017年初頭ではテキスト化された会話が主な研究対象であるが、  \n",
+    "直接音声翻訳を生成するなどテキスト翻訳を生成しない研究例もある。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 対話モデル\n",
+    "主なタスクは対話文脈を参照して適切な応答を予測するタスクである。  \n",
+    "話者が変わることを話者交代（turn-taking）、  \n",
+    "複数の話者交代で区切られた発話の系列を対話文脈（context）と呼ぶ。  \n",
+    "\n",
+    "最後の話者交代の後の次の話者がコンピュータ（対話システム）という想定で、  \n",
+    "返すべき発話（応答、response）を予測する。  \n",
+    "これにもう一人の話者が応答し、対話システムが次の応答を予測することを繰り返して対話が行われ、  \n",
+    "目的を達成するか達成できないことが分かるまで対話が続く。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "系列変換モデルを適用するときは、入力系列：対話文脈、出力系列：応答　とする。  \n",
+    "また話者交代を示すために、発話の最後を示す仮単語を導入したり  \n",
+    "発話の最初に話者役割を表す仮単語を挿入するなどの方法で話者交代を表現する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "別の手法として、話者交代および発話者を積極的にモデル化した手法も提案されている。  \n",
+    "\n",
+    "I.V.Serban et al, [Building End-To-End Dialogue Systems Using Generative Hierarchical Neural Network Models](https://arxiv.org/abs/1507.04808) Proceedings of AAAI, p 3776-3783, 2016  \n",
+    "では文脈状態を表現する新たな隠れ状態ベクトルを用意し、  \n",
+    "これを発話単位で更新することで階層的な文脈符号化を行う手法が提案されている。   \n",
+    "\n",
+    "J. Li et al, [A Persona-Based Neural Conversation Model](https://arxiv.org/abs/1603.06155) Proceedings of ACL, p 994-1003, 2016  \n",
+    "では訓練データ内の話者をモデル化しており、  \n",
+    "訓練データ中の話者 ID を使って個性（話者の発話特徴）を反映した応答生成を提案している。\n",
+    "\n",
+    "H.Ouchi and Y.tsuboi. [Addressee and Response Selection System](https://github.com/hiroki13/response-ranking) Proceedings of EMNLP, p 2133-2143, 2016.  \n",
+    "では対話内の話者をモデル化しており、各話者ごとの隠れ状態ベクトルで発話者の状態を表すことで  \n",
+    "個々の発話者が１つの対話内で一貫した発言をするように工夫している。  \n",
+    "実装上は、階層モデルの文脈表現状態を発話者ごとに分割し  \n",
+    "隠れ状態ベクトルがその発話者による発話だけで動的に更新されるように拡張している。  \n",
+    "本手法では訓練データにない話者も表現することが可能である。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 対話モデルの発展\n",
+    "系列変換モデルでは多くの文脈で許容されるような短い応答ばかり出してしまうという問題がある。\n",
+    "\n",
+    "現在のモデルでは長い文脈を適切に符号化し応答を生成する能力に不足があることも考えられ、  \n",
+    "I.V.Servn et al (2016) では、スコアが最大の応答を返す代わりに  \n",
+    "条件付き確率 $P(R|C)$ に従って復号化器で応答単語をサンプリングした方が多様な応答が得られること、  \n",
+    "ビーム探索や応答単語列全体の大域的なスコアの最大化では応答の多様性が得られないことを報告している。\n",
+    "\n",
+    "J.Li et al. [A Diversity-Promoting Objective Function for Neural Conversation Models](https://arxiv.org/abs/1510.03055) In. Proc of NAACL 2016  \n",
+    "では次のような文脈 $C$ と応答 $R$ の相互情報量を最大化する応答を生成することで  \n",
+    "さまざまな応答が生成されることを示した。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\log \\frac{P(R,C)}{P(R)P(C)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "ただし相互情報量の最大化と系列変換モデルの結合は難しいため、  \n",
+    "この論文では応答予測モデル $P(R|C)$ で生成した候補 $k$ 個を  \n",
+    "応答から文脈の予測を行う系列変換モデル $P(C|R)$ で並び替えるなどの手法により近似している。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 対話システムの自動評価\n",
+    "人手評価を代替する自動評価手法は重要であるが、2017年では明らかな解決策はない。\n",
+    "\n",
+    "対話タスクは評価という点では翻訳や要約と類似しており、\n",
+    "どれだけ人の応答に似た発話が返せたかを評価することとなる。\n",
+    "しかし、文脈依存であるために対話ログを参照しての自動評価は難しい。\n",
+    "\n",
+    "機械翻訳で使われる評価指標のように１つの参照応答との単語の重なりを重視する評価の結果は    \n",
+    "人手によるシステム応答の評価結果とほとんど相関がない。  \n",
+    "（注：翻訳でも性能が一定の水準に達したことにより、BLEEスコアによるモデルの相対評価が不可能となりつつある）\n",
+    "\n",
+    "生成された応答の自動評価の難しさを避けるために  \n",
+    "生成を直接行わず複数の応答候補群から正しい参照応答を選択する応答選択タスクによる評価方法も提案されており、  \n",
+    "システムが出力した候補の $k$ 番目以内に正解が含まれる割合（再現率@k）で自動評価することが一般的である。\n",
+    "\n",
+    "応答選択タスクは人とシステムとの比較も容易であり、人の再現率は偶然よりかなり高く、  \n",
+    "対話システムを評価するのに有効と考えられている。  \n",
+    "ただし、不正解応答の作り方に課題があり、妥当な応答が不正解となる可能性があるほか、  \n",
+    "文脈を読み取る能力などを評価できるかどうかは明らかでない。\n",
+    "\n",
+    "実環境での話者交代は話者同士の相互作用により、対話システムはこのタイミングも予測する必要がある。  \n",
+    "また複数人会話では話者交代はより複雑となり、対話相手を何らかの方法で明示する必要が出てくる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 5.4　質問応答 （question answering; QA）\n"
    ]
   }
  ],
