--- a/NLP_by_Deep_Learning/NLP_by_DL_5.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_5.ipynb
@@ -425,8 +425,8 @@
     "#### 対話システムの自動評価\n",
     "人手評価を代替する自動評価手法は重要であるが、2017年では明らかな解決策はない。\n",
     "\n",
-    "対話タスクは評価という点では翻訳や要約と類似しており、\n",
-    "どれだけ人の応答に似た発話が返せたかを評価することとなる。\n",
+    "対話タスクは評価という点では翻訳や要約と類似しており、  \n",
+    "どれだけ人の応答に似た発話が返せたかを評価することとなる。  \n",
     "しかし、文脈依存であるために対話ログを参照しての自動評価は難しい。\n",
     "\n",
     "機械翻訳で使われる評価指標のように１つの参照応答との単語の重なりを重視する評価の結果は    \n",
@@ -451,7 +451,94 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 5.4　質問応答 （question answering; QA）\n"
+    "### 5.4　質問応答 （question answering; QA）\n",
+    "QAは自然言語で与えられた質問に対して自然言語で回答を行うタスクである。\n",
+    "\n",
+    "最も典型的な質問は事実型質問応答（factoid QA）といい、  \n",
+    "誰、どこ、いつといった質問のように回答が具体的な名刺となるものである。  \n",
+    "それに対し、非事実型質問応答（non-factoid QA）は、なぜ、どのようにといった質問に代表される。\n",
+    "\n",
+    "対象とする分野の違いによる区分では、  \n",
+    "特定の分野に限った場合をクローズドドメイン質問応答（closed-domain QA）、  \n",
+    "分野に限定を置かない場合をオープンドメイン質問応答（open-domain QA）と呼ぶ。\n",
+    "\n",
+    "また、画像に対して質問を行う画像質問応答（visual QA）や文書読解（reading comprehension）などのタスクもある。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 回答選択タスク\n",
+    "質問応答はいくつかの処理に分解されて実行されることが一般的であり、例えば次のように分けられる。\n",
+    "\n",
+    " - 質問解析（question analysis）\n",
+    " - 文書検索：関連する文書を検索する\n",
+    " - 回答抽出：検索結果から回答候補の抽出を行う　\n",
+    " - 回答選択（answer selection）\n",
+    "\n",
+    "検索部分に情報検索の技術を応用し、回答選択部分に深層学習を利用することが多い。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "以下は質問応答の回答選択タスクについて考える。\n",
+    "\n",
+    "回答選択問題を次のように定式化する。  \n",
+    "質問文 $q$ と $N$ 個の回答候補 $\\{a_{1}, \\ldots, a_{N}\\}$ が与えられ、  \n",
+    "システムは $q$ の適切な回答を回答候補の中から選択する。  \n",
+    "\n",
+    "・実装上は、質問文や回答候補をベクトル化するものとする。  \n",
+    "　ベクトル化の手法としては bi-directional LSTM, Tree-RNN, CNN, CNN + LSTM, attention など様々である。\n",
+    "\n",
+    "質問文ベクトル $\\mathbf{v}^{(q)}$ と回答文ベクトル $\\mathbf{v}^{(a)}$ に対して、類似度関数 $f$ によって類似度 $f(\\mathbf{v}^{(q)}, \\mathbf{v}^{(a)})$ を計算する。  \n",
+    "類似度関数はcos類似度などが用いられ、この類似度を元にして損失を定義する。\n",
+    "\n",
+    "よく用いられる損失関数は次のようなものである。  \n",
+    "正解事例を $a^{+}$、事前に定めたマージンを $m \\in \\mathbb{R}$ として\n",
+    "\n",
+    "\\begin{align*}\n",
+    "f(\\mathbf{v}^{(q)}, \\mathbf{v}^{(a^{+})}) < m + f(\\mathbf{v}^{(q)}, \\mathbf{v}^{(a^{-})})\n",
+    "\\end{align*}\n",
+    "\n",
+    "を満たす負例 $a^{-}$ を全回答候補の中から無作為に抽出する。  \n",
+    "この負例によって損失関数を次のように定義する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "l(\\mathbf{v}^{(q)}, \\mathbf{v}^{(a^{+})}, \\mathbf{v}^{(a^{-})}, m) = \\max \\{ 0, m - f(\\mathbf{v}^{(q)}, \\mathbf{v}^{(a^{+})}) + f(\\mathbf{v}^{(q)}, \\mathbf{v}^{(a^{-})})\\}\n",
+    "\\end{align*}\n",
+    "\n",
+    "この損失関数は重み付き近似順位ペアワイズ損失（WARP loss）から重みの部分を省略した形となっている。\n",
+    "\n",
+    "符号化（ベクトル化）部分と損失計算部分は別々に設計でき、  \n",
+    "組み合わせて単一のニューラルネットにすることで end-to-end に学習させることができる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "質問応答のタスクは Text REtrieval Conference (TREC) の  \n",
+    "[Question Answering Track](http://trec.nist.gov/data/qamain.html) タスクとして長く研究されている。\n",
+    "\n",
+    "M.Wang et al. [What is the Jeopardy Model? A Quasi-Synchronous Grammar for QA](http://www.aclweb.org/anthology/D/D07/D07-1003.pdf) In Proc. of EMNLP-CoNLL 2007  \n",
+    "では過去のTRECのタスクから回答文候補と正解の回答文を与えたデータセットが公開されており、比較用に広く使われている。\n",
+    "\n",
+    "M.Iyyer et al. [A Neural Network for Factoid Question Answering over Paragraphs.](https://cs.umd.edu/~miyyer/pubs/2014_qb_rnn.pdf) In Proc. of EMNLP, p 633-644, 2014.  \n",
+    "ではクイズボウルという回答が固有名詞となるタスクを解いており、こちらの[データセット](https://cs.umd.edu/~miyyer/qblearn/index.html)も公開されている。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 回答選択問題の評価方法\n"
    ]
   }
  ],
