--- a/NLP_by_Deep_Learning/NLP_by_DL_5.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_5.ipynb
@@ -538,7 +538,74 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### 回答選択問題の評価方法\n"
+    "#### 回答選択問題の評価方法\n",
+    "評価尺度としては次のようなものがよく使われる。\n",
+    "\n",
+    "平均適合率の平均（mean average precision; MAP）  \n",
+    "　全体で $N$ 件の正解候補があり、$M$ 件が正解とする。  \n",
+    "　システムが $S$ 個の候補を正解として選択し、うち $T$ 件が実際に正解であったとき、  \n",
+    "　$T/S$ を適合率、$T/M$ を再現率と呼ぶ。\n",
+    "\n",
+    "　さて、システムが各回答候補に得点をつけて確信度の高い順に並べるとき、  \n",
+    "　上位 $k$ 件の中での適合率を適合率@k（P@k）、  \n",
+    "　正解回答候補の順位の適合率@kの平均を平均適合率と呼ぶ。  \n",
+    " \n",
+    "　データセットは複数の質問文を含むので、これらよりMAPを計算する。\n",
+    " \n",
+    "平均逆順位（mean reciprocal rank; MRR）  \n",
+    "　正解の回答候補の中で一番よい順位を $r$ とするとき、$1/r$ を逆順位と呼ぶ。  \n",
+    "　（正解が複数あるとして、システムが並べたリストのうち最高順位の正解のみに着目している）  \n",
+    "　複数の質問文について逆順位の平均がMRRである。\n",
+    " \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### end-to-endの質問応答\n",
+    "質問応答全体を単一のニューラルネットで解決するには、知識源の情報もニューラルネットで扱う必要があり、  \n",
+    "記憶ネットワークをQAタスクに適用する研究が進められている。\n",
+    "\n",
+    "J.Weston et al., [Towards AI-Complete Question Answering: A Set of Prerequisite Toy Tasks](https://arxiv.org/abs/1502.05698) In Proc. of ICLR, 2015.  \n",
+    "で提案された **bAbI タスク**は20種の問題形式で構成された toy-task setであり、  \n",
+    "訓練データには文の羅列、質問、回答、サポート事実のセットが含まれる。\n",
+    "\n",
+    "どのタスクもノイズを含まず、意味論や知識表現を必要とせず、  \n",
+    "人間が解けば精度100%になるよう単純かつ自然な問題で構成されている。  \n",
+    "　（参考：[論文解説 Memory Networks (MemNN)](http://deeplearning.hatenablog.com/entry/memory_networks) by ryobot）  \n",
+    "\n",
+    "しかしLSTMなどの手法では十分ない精度で回答することができず、  \n",
+    "記憶ネットワークなどによりはじめて高精度に回答できるようになることが報告されている。\n",
+    "\n",
+    "bAbIタスクのデータセットなどはプロジェクトのページから利用可能。  \n",
+    "-> [The bAbI project](https://research.fb.com/downloads/babi/) | facebook research"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "また、open-domain QA に記憶ネットワークを適用する研究もあり、  \n",
+    "知識源としてWeb文書や、より構造化された知識ベース（knowledge base; KB）が用いられる。\n",
+    "\n",
+    "知識ベースとしては [Freebase](https://developers.google.com/freebase/) や [DBpedia](http://wiki.dbpedia.org/) が知られており、  \n",
+    "いずれも主語・述語・目的語の３つ組の集合となっている。\n",
+    "\n",
+    "一例として、  \n",
+    "A.Bordes et al. [Large-scale Simple Question Answering with Memory Networks](https://arxiv.org/abs/1506.02075) \tarXiv:1506.02075 [cs.LG] (2015)   \n",
+    "では単一の３つ組から回答できる事実型質問応答タスクを記憶ネットワークで回答する方法が提案されている。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "次のnotebookへ続く。"
    ]
   }
  ],
