--- a/NLP_by_Deep_Learning/NLP_by_DL_6.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_6.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chapter 6　汎化性能を向上させる技術"
+    "## Chapter 6　汎化性能を向上させる技術\n",
+    "---\n",
+    "注：\n",
+    " - ６章の内容は手法の羅列のみなので、詳細や実装は別の資料を参考にすることを推奨する。\n",
+    " - 数式の詳細や実装についてはすでに他のnotebookで扱ったので、ここでは深入りしていない。"
    ]
   },
   {
@@ -135,7 +139,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### アンサンブル法 （ense,ble method）\n",
+    "#### アンサンブル法 （ensemble method）\n",
     "複数モデルを組み合わせて予測する手法で、  \n",
     "コミッティマシン（committee machines）やモデル平均化法（model averaging）とも呼ばれる。\n",
     "\n",
@@ -178,6 +182,85 @@
    "source": [
     "---\n",
     "### 6.3　最適化誤差低減に効く手法\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 初期値設定\n",
+    "初期値が同じパラメータは勾配法を適用すると同じく更新されてしまうので、  \n",
+    "それぞれの値を違える必要がある。\n",
+    "\n",
+    "一般にはXavierの初期値やHeの初期値が頻用されている。\n",
+    "\n",
+    "IRNNはRNNのパラメータ行列（の一部）を単位行列で初期化する手法である。これは\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}_{t}^{(l)} = a^{(l)} (\\tilde{\\mathbf{W}}^{(l)}\\mathbf{h}_{t}^{(l-1)} + \\mathbf{h}_{t-1}^{(l)} + \\mathbf{b}^{(l)})\n",
+    "\\end{align*}\n",
+    "\n",
+    "のように、ある層から次の層へのショートカットを形成することに等しい。\n",
+    "\n",
+    "また、忘却ゲートにおけるバイアスパラメータの初期値を１など大きな値にすることも  \n",
+    "同様にショートカット形成としての効果がある。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### カリキュラム学習 （curriculum learning）\n",
+    "学習過程を複数段階に分け、簡単な概念からはじめて  \n",
+    "徐々に複雑な概念ないしタスクを学習させていく手法である。\n",
+    "\n",
+    "タスクの難易度について仮定または事前知識が必要なものの  \n",
+    "複数の分野で有用性が報告されている。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 正規化\n",
+    "勾配法ではパラメータ同士の関係を考慮しないため、パラメータ間に依存性があると学習が安定しないことがある。\n",
+    "\n",
+    "ニュートン法は有効であることが知られているが、  \n",
+    "パラメータ数の２乗に比例して計算量が増加するために負荷が高い。\n",
+    "\n",
+    "バッチ正規化（batch normalization）はよく使われる手法で、  \n",
+    "ミニバッチ内で計算した平均と分散を用いて入力を正規化する。  \n",
+    "予測時には訓練データ中の複数のミニバッチについて求めた平均と分散とで正規化を行う。\n",
+    "\n",
+    "類似手法に層正規化（layer normalization）があり、各層の隠れ状態ベクトルの要素集合について正規化する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 6.4　超パラメータ選択\n",
+    "ハイパーパラメータの選択にはグリッド探索やランダム探索がよく用いられる。  \n",
+    "この２者について現在のところ優劣を示す証拠はないので、あなたの信仰に従って選んでよい。\n",
+    "\n",
+    "ベイズ的最適化（Bayesian optimization; BO）はガウス過程による回帰を用いて  \n",
+    "説明変数と目的変数との間で回帰モデルを構築し、  \n",
+    "よりよい目的変数の値を与える可能性の高い説明変数を見つける手法である。\n",
+    "\n",
+    "BOをハイパーパラメータ選択に適用することで、  \n",
+    "より良い性能を与える可能性が高く、かつ評価の不確実性が高い候補ほど高い確率で調査できるため  \n",
+    "効率の良い探索と選択ができる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "次のnotebookへ続く。"
    ]
   }
  ],
